1128 做一點，然後加上單元測試的控制項目 製作控制組的版本 #11

--- a/www/index.html
+++ b/www/index.html
@@ -149,7 +149,7 @@
                     // -----------------------------------
 
                     $scope.db_status.ready(function () {
-                        if ($._GET("qunit") !== "1") {
+                        if ($scope.CONFIG.qunit === false && $._GET("qunit") !== "1") {
                             ons.ready(function () {
                                 _app_ready($scope);
                             });
