--- a/www/profile.html
+++ b/www/profile.html
@@ -21,8 +21,7 @@
         </ons-row>
         
         <ons-tabbar>
-            <ons-tab label="{{ 'ONS_OK' | translate }}" 
-                     onclick="$(this).parents('form').submit();"></ons-tab>
+            <ons-tab label="{{ 'ONS_OK' | translate }}" ></ons-tab>
         </ons-tabbar>
     </form>
 </ons-page>
