--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -54,7 +54,7 @@
 
     <!-- ===================================== -->
         
-    <div class="hint" ng-show="_text_select.note !== null">
+    <div class="hint">
         <ons-button  ng-show="ctl_test_select.var.show_note === false"
                      ng-click="ctl_test_select.var.show_note = true">
             {{ "TEST_SELECT_HINT_BUTTON" | translate }}
