--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -19,7 +19,9 @@
              ng-show="_target_data.target !== 0">
             {{ _target_data.done}} / {{ _target_data.target}}
         </div>
-
+        
+        <ons-icon icon='ion-android-more-vertical' fixed-width="true" class="more-button" 
+                      ng-click="ctl_learn_flashcard.open_more_menu($event)"></ons-icon>
     </ons-toolbar>
 
     <div class="flashcard">
