--- a/www/target_init.html
+++ b/www/target_init.html
@@ -35,8 +35,7 @@
         <!-- ======================================= -->
 
         <ons-tabbar>
-            <ons-tab label="{{ 'ONS_OK' | translate }}" 
-                     onclick="$(this).parents('form').submit();"></ons-tab>
+            <ons-tab label="{{ 'ONS_OK' | translate }}"></ons-tab>
         </ons-tabbar>
 
         <!-- ======================================= -->
