--- a/www/test_select.html
+++ b/www/test_select.html
@@ -27,7 +27,7 @@
     </ons-toolbar>
 
     <div class="question"
-         ng-click="ctl_activity.speak(_test_select.question)">
+         ng-click="ctl_activity.speak(_test_select.question, 'zh')">
         
         <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak hide"></ons-icon>
         {{ _test_select.question }}
