--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,7 @@
     <script src="js/controller_activity.js"></script>
     <script src="js/controller_learn_flashcard.js"></script>
     <script src="js/controller_note.js"></script>
+    <script src="js/controller_note_list.js"></script>
     <script src="js/controller_notification.js"></script>
     <script src="js/controller_target_history.js"></script>
 
@@ -143,6 +144,7 @@
                     controller_activity($scope);
                     controller_learn_flashcard($scope);
                     controller_note($scope);
+                    controller_note_list($scope);
                     controller_test_select($scope);
                     controller_notification($scope, $filter);
                     controller_target_history($scope);
