--- a/www/setting.html
+++ b/www/setting.html
@@ -1,4 +1,6 @@
-<ons-page id="setting_html" ng-device-backbutton="app.menu.open()" ng-init="profile = ctl_profile.status">
+<ons-page id="setting_html" 
+          ng-device-backbutton="main_back()" 
+          ng-init="profile = ctl_profile.status">
 
     <ons-toolbar>
         <div class="left">
