1204 config.js中的重置設定，用偵測有沒有table的功能，讓它不需要自動重新整理 close #95

--- a/www/target_init.html
+++ b/www/target_init.html
@@ -31,7 +31,14 @@
                 </ons-row>
             </ons-list-item>
         </ons-list>
-
+        
+        <!--
+        {{ ctl_target.status }}
+        {{ ctl_target.var }}
+        {{ ctl_target.get_max_target('learn_flashcard') }}
+        {{ ctl_target.status }}
+        -->
+        
         <!-- ======================================= -->
 
         <ons-tabbar>
