1204 target_init跟target_edit都放上未完成目標 close #88

--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -4,7 +4,7 @@
           ng-init="_learn_flashcard = ctl_learn_flashcard.var.learn_flashcard">
     <ons-toolbar>
         <div class="left">
-            <ons-toolbar-button ng-click="menu_click($event)" class="menu-open">
+            <ons-toolbar-button ng-click="app.menu.open()" class="menu-open">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
                     <ons-icon icon="ion-navicon" fixed-width="true"></ons-icon>
                 </span>
