1204 target_init跟target_edit都放上未完成目標 close #88

--- a/www/index.html
+++ b/www/index.html
@@ -24,15 +24,17 @@
         <!-- CSP support mode (required for Windows Universal apps) -->
         <link rel="stylesheet" href="lib/angular/angular-csp.css" />
 
-        <link rel="stylesheet" href="css/onsen-css-components.css" />
+        <link rel="stylesheet" href="pulipuli-utils/css/onsen-css-components.css" />
         <!-- ======================================== 
              Style
              ======================================== -->
-        <link rel="stylesheet" href="css/float-action-button.css" />
-        <link rel="stylesheet" href="css/page-about_html.css" />
-        <link rel="stylesheet" href="css/ons-view.css" />
-        <link rel="stylesheet" href="css/ons.css" />
+        <link rel="stylesheet" href="pulipuli-utils/css/float-action-button.css" />
+        
+        <link rel="stylesheet" href="pulipuli-utils/css/ons-view.css" />
+        <link rel="stylesheet" href="pulipuli-utils/css/ons.css" />
+        <link rel="stylesheet" href="pulipuli-utils/css/bootstrap.css" />
 
+        <link rel="stylesheet" href="css/page-about_html.css" />
         <link rel="stylesheet" href="css/controller_target.css" />
         <link rel="stylesheet" href="css/controller_learn_flashcard.css" />
         <link rel="stylesheet" href="css/controller_note.css" />
@@ -65,20 +67,20 @@
     <script src="lib/fingerprint/fingerprint.min.js"></script>
     <script type="text/javascript" src="lib/js-xlsx/xlsx.core.min.js"></script>
 
-    <script src="pulipuli-utils/app_factory_db_utils.js"></script>
-    <script src="pulipuli-utils/app_factory_ons_view.js"></script>
-    <script src="pulipuli-utils/app_factory_ons_utils.js"></script>
-    <script src="pulipuli-utils/app_factory_jquery.js"></script>
+    <script src="pulipuli-utils/js/app_factory_db_utils.js"></script>
+    <script src="pulipuli-utils/js/app_factory_ons_view.js"></script>
+    <script src="pulipuli-utils/js/app_factory_ons_utils.js"></script>
+    <script src="pulipuli-utils/js/app_factory_jquery.js"></script>
 
-    <script src="pulipuli-utils/db_log.js"></script>
-    <script src="pulipuli-utils/db_status.js"></script>
+    <script src="pulipuli-utils/js/db_log.js"></script>
+    <script src="pulipuli-utils/js/db_status.js"></script>
 
-    <script src="pulipuli-utils/cordova_utils.js"></script>
-    <script src="pulipuli-utils/cordova_social_share.js"></script>
-    <script src="pulipuli-utils/cordova_inappbrowser_submit.js"></script>
+    <script src="pulipuli-utils/js/cordova_utils.js"></script>
+    <script src="pulipuli-utils/js/cordova_social_share.js"></script>
+    <script src="pulipuli-utils/js/cordova_inappbrowser_submit.js"></script>
 
     <script src='lib/responsivevoice/responsivevoice.js'></script>
-    <script src="pulipuli-utils/cordova_text_to_speech.js"></script>
+    <script src="pulipuli-utils/js/cordova_text_to_speech.js"></script>
 
     <script src="js/controller_profile.js"></script>
     <script src="js/controller_flashcard.js"></script>
