--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -47,8 +47,8 @@
         <!-- ======================================= -->
 
         <ons-modal var="target_help_modal" ng-click="target_help_modal.hide()" class="target-help-modal">
-            <img src="{{ ctl_target.var.target_help.help_img}}" />
-            <div class="message">{{ ctl_target.var.target_help.help}}</div>
+            <img ng-src="{{ ctl_target.var.target_help.help_img }}" />
+            <div class="message">{{ ctl_target.var.target_help.help }}</div>
             <ons-button>{{ "ONS_OK" | translate }}</ons-button>
         </ons-modal>
     </form>
