1204 menu在icon寬度時，保留setting的icon #89

--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -32,7 +32,7 @@
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.q}}
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
         </ons-row>
-        <ons-row class="side a">
+        <ons-row class="side a bg-info">
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.a}}
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
