--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -24,7 +24,7 @@
         </div>
     </ons-toolbar>
 
-    <div class="question">
+    <div class="question  bg-info">
         
         <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak hide"></ons-icon>
         {{ _test_select.question }}
