--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -39,7 +39,7 @@
         </ons-row>
 
         <!-- 中文的部分 -->
-        <ons-row class="side a" ng-click="ctl_activity.speak(ctl_learn_flashcard.var.learn_flashcard.a, 'zh')">
+        <ons-row class="side a bg-info" ng-click="ctl_activity.speak(ctl_learn_flashcard.var.learn_flashcard.a, 'zh')">
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard.a}}
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
